refactor(transport): run the engine on an Agrona AgentRunner